# ao_compensation_model

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  cookiecutter.json  pyproject.toml  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker.yml
data/ML/2026_03_09/15_52_53/: ML_right.txt
data/ML/2026_03_09/15_54_01/: ML_left.txt
data/ML/2026_03_09/15_55_04/: ML_left.txt  ML_right.txt
data/ML/2026_03_09/15_56_01/: ML_right.txt
data/ML/2026_03_09/16_05_24/: ML_left.txt  ML_right.txt
data/ML/2026_03_09/16_40_56/: ML_left.txt  ML_right.txt
data/ML/2026_03_09/16_44_09/: ML_left.txt  ML_right.txt
data/ML/2026_03_09/16_57_14/: ML_right.txt
data/ML/2026_03_09/17_16_11/: ML_left.txt
data/ML/2026_03_09_Harry/15_52_53_GD/: ML_left.csv  ML_left.txt
data/ML/2026_03_09_Harry/15_54_01_GD/: ML_left.csv  ML_right.txt
data/ML/2026_03_09_Harry/15_56_01_GD/: ML_left.txt
src/ao_compensation_model/: __init__.py  __main__.py  app.py  definitions.py  gt_dataprep.py  test.py  training.py  txt2csv.py  utils.py  validation.py  validation_lite.py
src/ao_compensation_model/dataset/raw/: 20260304_14_00_54_3050.csv  20260304_14_13_25_40603050.csv  20260304_14_26_34_4km_stopgo.csv  20260304_14_29_24_5km_stopgo.csv  20260304_17_10_24_stopgo.csv  20260304_17_11_45_stopgo.csv  20260304_17_13_22_stopgo.csv
src/ao_compensation_model/dataset/test/: 20260304_14_26_34_4km_stopgo.csv  20260304_14_29_24_5km_stopgo.csv  test_20260304_14_26_34_4km_stopgo_target.csv  test_20260304_14_29_24_5km_stopgo_target.csv
src/ao_compensation_model/dataset/training/: 20260304_14_00_54_3050_target.csv  20260304_14_13_25_40603050_target.csv  20260304_14_26_34_4km_stopgo_target.csv  20260304_14_29_24_5km_stopgo_target.csv  20260304_17_10_24_stopgo_target.csv  20260304_17_11_45_stopgo_target.csv  20260304_17_13_22_stopgo_target.csv  2026_03_09_H15_52_53_LG_target.csv  2026_03_09_H_1544_4_target.csv  2026_03_09_Y17_05_33_TM_stopgo_target.csv  2026_03_10_D17_18_33_TM_Stopgo_target.csv  2026_03_10_D17_22_18_LG_target.csv  2026_03_10_J16_39_30_TM_stopgo_target.csv  2026_03_10_J16_42_38_LG_target.csv  2026_03_10_N17_54_59_LG_target.csv  (+5 more)
src/ao_compensation_model/model/: gru_model.h5  gru_model_2026_03_12_val0.3596.h5  gru_model_2026_03_12_val0.3596.tflite  gru_model_2026_03_12_val0.5848.keras  gru_model_2026_03_12_val0.5848.tflite  gru_model_2026_03_13_val0.3691.keras  gru_model_2026_03_13_val0.3691.tflite  gru_model_2026_03_13_val0.3792.keras  gru_model_2026_03_13_val0.3792.tflite  gru_model_optimized.tflite  omega_scaler.pkl  scaler.pkl
tests/: __init__.py  app_test.py  gt_dataprep_test.py  training_test.py  utils_test.py
{{ cookiecutter.repo_name }}/: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  repo_tree.py
{{ cookiecutter.repo_name }}/.github/workflows/: ci.yml  docker.yml  pypi-publish.yml
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.module_name }}/: __main__.py  app.py  utils.py
{{ cookiecutter.repo_name }}/tests/: app_test.py  conftest.py  utils_test.py
(+124 files in other folders)
