[project]
name = "ao_compensation_model"
version = "0.1.5"
description = "A GRU model that improves the performance of adaptive oscillators in stop-go and go-stop situations."
readme = "README.md"
authors = [
    { name = "Liuhan Huang", email = "liuhan.huang@tum.de" }
]
requires-python = ">=3.11,<3.14"

dependencies = [

  "numpy>=2.2.3",
  "loguru>=0.7.3",
  "pandas>=2.2",
  "scipy>=1.14",
  "scikit-learn>=1.6",
  "joblib>=1.4",
  "matplotlib>=3.9",
  "tensorflow>=2.18",
  "ai-edge-litert>=2.1.2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.9",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "pre-commit>=4.1.0",
  "coveralls>=4.0.1",
  "pyright>=1.1.407",
]
hw = [
  "ai-edge-litert>=1.2",
]
no_hw = [
]

[project.urls]
homepage = "https://github.com/TUM-Aries-Lab/ao_compensation_model"

# -------------------------------------------------------------------
# RUFF configuration
# -------------------------------------------------------------------
[tool.ruff]
line-length = 88
fix = true

lint.select = [
  "E",        # Pycodestyle errors (indentation, whitespace, formatting)
  "W",        # Pycodestyle warnings (trailing spaces, stylistic issues)
  "F",        # Pyflakes correctness (undefined names, unused imports, etc.)
  "C90",      # McCabe complexity (flags overly complex functions)
  "I",        # Import sorting and grouping (isort rules)
  "N",        # Naming conventions (PEP 8: snake_case, PascalCase, constants)
  "D",        # Docstring style and presence (pydocstyle)
  "UP",       # Modern Python syntax upgrades (pyupgrade)
  "B",        # Bugbear: common bugs, logic issues, unsafe patterns
  "S",        # Bandit security checks (eval, insecure hashes, etc.)
  "YTT",      # Python version–specific traps (flake8-2020)
  "Q",        # Quote consistency (flake8-quotes)
  "PL",       # Pylint rules (readability, unused vars, unnecessary else, etc.)
  "RUF",      # Ruff-specific rules (formatter compatibility, extra checks)
  "T20",      # Disallow print() / pprint() (prefer proper logging)
  "F841",     # Unused local variables (Pyflakes-specific)
  "ERA001",   # Commented-out code detection (eradicate) d
  "PLR0913",  #
]

lint.ignore = [
  "D203","D213","E501","N803","N806","D415","S101","E203","E731",
  "D107","PLR2004","S607","S605","S603", "S311", "PLC0415"
]

[tool.ruff.lint.per-file-ignores]
"src/ao_compensation_model/txt2csv.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["ao_compensation_model"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# BUILD SYSTEM (Hatchling via uv)
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tell hatchling where the package lives (src layout)
[tool.hatch.build.targets.wheel]
packages = ["src/ao_compensation_model"]

# Include files in source distributions
[tool.hatch.build.targets.sdist]
include = [
  "src/ao_compensation_model",
  "README.md",
  "LICENSE",
]
